--- a/HelloWorldComEsteroids/pom.xml
+++ b/HelloWorldComEsteroids/pom.xml
@@ -28,6 +28,20 @@
             <artifactId>log4j-core</artifactId>
             <version>2.17.1</version> <!-- Use a versão mais recente -->
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc11</artifactId>
+            <version>23.2.0.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
