--- a/Sprint3_CCR_JAVA/pom.xml
+++ b/Sprint3_CCR_JAVA/pom.xml
@@ -29,6 +29,13 @@
             <version>2.17.1</version> <!-- Use a versão mais recente -->
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
