--- a/Sprint3_CCR_JAVA/pom.xml
+++ b/Sprint3_CCR_JAVA/pom.xml
@@ -36,6 +36,19 @@
             <version>2.12.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc11</artifactId>
+            <version>23.2.0.0</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
