--- a/2SEM/minha-api-1tdspa/pom.xml
+++ b/2SEM/minha-api-1tdspa/pom.xml
@@ -52,6 +52,8 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-rest-jackson</artifactId>
         </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -59,6 +61,9 @@
             <version>1.18.36</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>    <groupId>io.quarkus</groupId>    <artifactId>quarkus-smallrye-fault-tolerance</artifactId></dependency>
+
     </dependencies>
 
     <build>
